--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=training-app
+
+spring.datasource.url=jdbc:mysql://localhost:3306/training_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
