--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.application.name=training-app
+spring.application.name=training_app
 
+# データベース接続情報
 spring.datasource.url=jdbc:mysql://localhost:3306/training_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=training_user
+spring.datasource.password=password
 
+# Hibernate設定
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# 明示的にDialectを指定
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
