ログイン画面表示

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,11 @@ spring.jpa.show-sql=true
 
 # 明示的にDialectを指定
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# テンプレートファイルのパス
+spring.thymeleaf.prefix=classpath:/templates/
+
+# テンプレートファイルの拡張子
+spring.thymeleaf.suffix=.html
+
+logging.level.org.springframework=DEBUG
