--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,26 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- WebJars for Bootstrap -->
+	    <dependency>
+	        <groupId>org.webjars</groupId>
+	        <artifactId>bootstrap</artifactId>
+	        <version>5.3.0</version>
+	    </dependency>
+	
+	    <!-- WebJars for jQuery -->
+	    <dependency>
+	        <groupId>org.webjars</groupId>
+	        <artifactId>jquery</artifactId>
+	        <version>3.6.0</version>
+	    </dependency>
+	
+	    <!-- WebJars for Popper.js -->
+	    <dependency>
+	        <groupId>org.webjars</groupId>
+	        <artifactId>popper.js</artifactId>
+	        <version>2.11.7</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
