登録画面修正

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,16 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # テンプレートファイルのパス
-spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.prefix=classpath:/templates/
 
 # テンプレートファイルの拡張子
 spring.thymeleaf.suffix=.html
 
 logging.level.org.springframework=DEBUG
+logging.level.org.mybatis=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+
+# MyBatis
+mybatis.mapper-locations=classpath:mapper/mysql/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.example.training_app.model
