ユーザー登録画面 バリデーションチェック 「パスワードが一致しません」実装途中

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,17 +12,16 @@ spring.jpa.show-sql=true
 # 明示的にDialectを指定
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# テンプレートファイルのパス
-#spring.thymeleaf.prefix=classpath:/templates/
-
-# テンプレートファイルの拡張子
-spring.thymeleaf.suffix=.html
-
-logging.level.org.springframework=DEBUG
-logging.level.org.mybatis=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
+# ログ
+logging.level.org.springframework=ERROR
+logging.level.org.mybatis=ERROR
+logging.level.org.hibernate.SQL=ERROR
+logging.level.com.example.training_app=DEBUG
 
 # MyBatis
 mybatis.mapper-locations=classpath:mapper/mysql/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.example.training_app.model
+
+# message
+spring.messages.basename=i18n/messages
