--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,20 @@
 			<artifactId>modelmapper-spring</artifactId>
 			<version>3.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+		    <version>2.0.0</version> <!-- 最新の安定版バージョンを指定してください -->
+		</dependency>
+		<dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+		    <version>1.4.0</version> <!-- 最新の安定版バージョンを指定してください -->
+		</dependency>
 	</dependencies>
 
 	<build>
