プロフィール更新処理 更新時に値が取得できない

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.password=password
 # Hibernate設定
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # ログ
 logging.level.org.springframework=ERROR
